--- a/views/admin_panel/dashboard.ejs
+++ b/views/admin_panel/dashboard.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -37,7 +38,7 @@
                 <div class="info">
                     <p>11</p>
                 </div>
-            </div>           
+            </div>
         </div>
 
         <h1>Finanças</h1>
@@ -61,7 +62,47 @@
         </div>
 
 
-    </div>
+        <div style="width: 400px;"><canvas id="acquisitions"></canvas></div>
+
+        <!-- GRÁFICO em chartjs -->
+        <!-- <script type="module" src="/javascripts/acquisitions.js"></script> -->
+
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                var ctx = document.getElementById('acquisitions').getContext('2d');
+        
+                var espec = <%- JSON.stringify(espec) %>;
+        
+                var data = {
+                    labels: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
+                    datasets: [{
+                        label: 'Quantidade de Agendamentos por Mês',
+                        data: espec.map(item => item.qtd),
+                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                        borderColor: 'rgba(75, 192, 192, 1)',
+                        borderWidth: 1
+                    }]
+                };
+        
+                var options = {
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                };
+        
+                var myChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: data,
+                    options: options
+                });
+            });
+        </script>
+        
+
+        </div>
+
 
 </body>
 
