--- a/views/admin_panel/module_panel.ejs
+++ b/views/admin_panel/module_panel.ejs
@@ -15,7 +15,7 @@
             <div>
                 <li>
                     <span class="material-symbols-outlined">dashboard_customize</span>
-                    <a href="/admin/dashboard">Dashboard</a>
+                    <a href="/admin">Dashboard</a>
                 </li>
             </div>
             <div>
