--- a/views/admin_panel/dashboard.ejs
+++ b/views/admin_panel/dashboard.ejs
@@ -33,7 +33,7 @@
             </div>
             <div class="card">
                 <div class="titulo">
-                    <p>Canlemanetos</p>
+                    <p>Cancelamentos</p>
                 </div>
                 <div class="info">
                     <p>11</p>
