--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,32 @@
     </div>
   </div>
 
+  <div class="funcionalidades">
+    <div>
+      <ul>
+        <li>
+          <div><img src="/images/skin-care.png" alt="" width="80px"></div>
+          <div><h2>CONTROLE DE AGENDAMENTO</h2></div>
+          <div><span>Agende seus atendimentos, controle os horáiros, verifique o serviço e o horário de cada cliente.</span></div>
+        </li>
+        <li>
+          <div><img src="/images/hair-dryer.png" alt="" width="80px"></div>
+          <div><h2>CONTROLE SEUS NÚMEROS</h2></div>
+          <div><span>Com o dashboard você consegue acompanhar dados como total de agendamentos, finanças, estoque e clientes.</span></div>
+        </li>
+        <li>
+          <div><img src="/images/makeup-brushes.png" alt="" width="80px"></div>
+          <div><h2>CONTROLE SEU ESTOQUE</h2></div>
+          <div><span>Adicione produtos na sua lista, controle a quantidade e ative gatilhos de aviso quando algo estiver acabando.</span></div>
+        </li>
+      </ul>
+    </div>
+  </div>
 
+
+  <footer>
+    <a href="https://www.flaticon.com/free-icons/skincare" target="_blank" title="skincare icons" style="color: rgb(223, 223, 223);">Skincare icons created by Ria Fitriana - Flaticon</a>
+  </footer>
 
 
 </body>
