--- a/public/stylesheets/index_style.css
+++ b/public/stylesheets/index_style.css
@@ -1,3 +1,5 @@
+@import url(./colors.css);
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -11,15 +13,18 @@
     border-radius: 6px;
 }
 
-/* MENU SUPERIOR */
+/* PÁGINA HOME */
+
+/* cabeçalho */
 
 .nav_superior {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 80px;
-    background-color: antiquewhite;
+    padding: 20px 100px;
+    background-color: var(--cor-principal);
+    border-bottom: 1px solid var(--cor-borders);
 }
 
 .div_superior ul {
@@ -31,13 +36,22 @@
     font-size: 20px;
 }
 
-/* BANNER PRINCIPAL */
+.div_superior ul li a {
+    color: var(--cor-fonte-menus);
+}
+
+.div_superior ul li a:hover {
+    border-bottom: 2px solid var(--cor-borders);
+}
+
+/* banner principal */
 
 .banner_superior {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 40px 80px;
-    background-color: rgb(201, 171, 228);
+    height: 70vh;
+    background-color: var(--cor-principal);
 }
 
 .texto_banner_superior {
@@ -71,7 +85,8 @@
     justify-content: start;
     align-items: start;
     margin: 40px 0;
-    font-size: 32px;
+    font-size: 28px;
+    color: var(--cor-fonte-destaques);
 }
 
 .itens_texto_banner_superior span {
@@ -79,10 +94,53 @@
 }
 
 .div_image_banner_superior img {
-    width: 500px;
+    width: 100%;
     border-radius: 20px;
 }
 
+/* banner funcionalidades */
+
+.funcionalidades {
+    margin: 80px 0px 100px 0px;
+    border-top: 1px solid var(--cor-borders);
+}
+
+.funcionalidades div ul {
+    display: flex;
+    justify-content: space-between;
+    height: 500px;
+    background-color: var(--cor-background);
+}
+
+.funcionalidades div ul li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    margin: 60px;
+    border-radius: 20px;
+    background-color: var(--cor-destaque);
+    padding: 20px;
+}
+
+.funcionalidades div ul li div img {
+    margin: 20px;
+}
+
+.funcionalidades div ul li div h2 {
+    padding: 20px 0px 20px 0px;
+}
+
+.funcionalidades div ul li div span {
+    font-size: 20px;   
+}
+
+/* footer */
+
+footer {
+    height: 200px;
+    background-color: black;
+}
 
 /* PÁGINA DE LOGIN e PÁGINA DE SIGNUP*/
 
@@ -101,7 +159,7 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: justify;
     height: 100%;
-    background-color: rgba(224, 190, 255, 0.562);
+    background-color: var(--cor-destaque);
     color: rgb(131, 131, 131);
 }
 
@@ -122,7 +180,7 @@
     align-items: center;
     min-height: 100vh;
     height: 100%;
-    background-color: rgba(184, 152, 216, 0.562);
+    background-color: var(--cor-background);
 }
 
 .div_form h2 {
@@ -135,7 +193,7 @@
     padding: 60px 40px;
     border: none;
     border-radius: 30px;
-    background-color: rgba(246, 236, 255, 0.562);
+    background-color: var(--cor-destaque);
 }
 
 .div_form form section {
@@ -167,14 +225,14 @@
     justify-content: center;
     align-items: center;
     height: 40px;
-    border: 1px solid gray;
+    border: 1px solid var(--cor-borders);
     border-radius: 26px;
     margin-top: 20px;
-    background-color: rgba(184, 152, 216, 0.562);
+    background-color: var(--cor-button);
 }
 
 .div_form form section button[type='submit']:hover {
-    background-color: rgba(246, 236, 255, 0.562);
+    background-color: var(--cor-button-hover);
 }
 
 .div_form .signup {
