Criação do bd para servicos.ejs e adição de dados reais na tabela do servico.ejs.

--- a/views/admin_panel/admin_cadastrar_cliente.ejs
+++ b/views/admin_panel/admin_cadastrar_cliente.ejs
@@ -11,8 +11,7 @@
 <body>
     <%- include('module_panel.ejs') %>
 
-
-        <div class="div_form">
+        <div class="form_div_cadastrar_cliente">
             <form action="/admin" method="post">
                 <fieldset>
                     <legend>Dados pessoais</legend>
@@ -48,6 +47,7 @@
                 <input type="submit" value="Cadastrar">
             </form>
         </div>
+
 
 </body>
 
