--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -283,7 +283,7 @@ table tr td {
     align-items: center;
     height: 40px;
     font-size: 20px;
-    background-color: aquamarine;
+    background-color: var(--cor-cards);
 }
 
 .div_dashboard_infos .info {
@@ -292,7 +292,7 @@ table tr td {
     align-items: center;
     height: 100%;
     font-size: 50px;
-    background-color: cadetblue;
+    background-color: var(--cor-cards);
 }
 
 /* menu de finanças */
@@ -319,7 +319,7 @@ table tr td {
     align-items: center;
     height: 40px;
     font-size: 20px;
-    background-color: aquamarine;
+    background-color: var(--cor-cards);
 }
 
 .div_dashboard_financas .info {
@@ -328,7 +328,7 @@ table tr td {
     align-items: center;
     height: 100%;
     font-size: 50px;
-    background-color: cadetblue;
+    background-color: var(--cor-cards);
 }
 
 
