--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -145,6 +145,8 @@
     padding: 8px 0;
     font-size: 18px;
     border-bottom: 1px solid rgb(226, 226, 226);
+    color: gray;
+
 }
 
 .listagem {
@@ -157,10 +159,12 @@
 
 .cliente {
     margin-left: 2px;
+    font-size: 20px;
 }
 
 .horario {
     margin-right: 2px;
+    font-size: 20px;
 }
 
 
