--- a/views/admin_panel/dashboard.ejs
+++ b/views/admin_panel/dashboard.ejs
@@ -13,95 +13,116 @@
 
     <%- include('module_panel.ejs') %>
 
-        <h1>Informações</h1>
-        <div class="div_dashboard_infos">
-            <div class="card">
-                <div class="titulo">
-                    <p>Clientes</p>
+    <div style="display: flex;">
+        <div>
+            <h1>Informações</h1>
+            <div class="div_dashboard_infos">
+                <div class="card">
+                    <div class="titulo">
+                        <p>Clientes</p>
+                    </div>
+                    <div class="info">
+                        <p>1.658</p>
+                    </div>
                 </div>
-                <div class="info">
-                    <p>1.658</p>
+                <div class="card">
+                    <div class="titulo">
+                        <p>Agendamentos</p>
+                    </div>
+                    <div class="info">
+                        <p>328</p>
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="titulo">
-                    <p>Agendamentos</p>
-                </div>
-                <div class="info">
-                    <p>328</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="titulo">
-                    <p>Cancelamentos</p>
-                </div>
-                <div class="info">
-                    <p>11</p>
-                </div>
-            </div>
-        </div>
-
-        <h1>Finanças</h1>
-        <div class="div_dashboard_financas">
-            <div class="card">
-                <div class="titulo">
-                    <p>Mensal</p>
-                </div>
-                <div class="info">
-                    <p>R$ 22.320,00</p>
+                <div class="card">
+                    <div class="titulo">
+                        <p>Cancelamentos</p>
+                    </div>
+                    <div class="info">
+                        <p>11</p>
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="titulo">
-                    <p>Anual</p>
+
+            <h1>Finanças</h1>
+            <div class="div_dashboard_financas">
+                <div class="card">
+                    <div class="titulo">
+                        <p>Mensal</p>
+                    </div>
+                    <div class="info">
+                        <p>R$ 22.320,00</p>
+                    </div>
                 </div>
-                <div class="info">
-                    <p>R$ 127.130,00</p>
+                <div class="card">
+                    <div class="titulo">
+                        <p>Anual</p>
+                    </div>
+                    <div class="info">
+                        <p>R$ 127.130,00</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
 
-        <div style="width: 400px;"><canvas id="acquisitions"></canvas></div>
+            <div style="width: 400px;"><canvas id="acquisitions"></canvas></div>
 
-        <!-- GRÁFICO em chartjs -->
-        <!-- <script type="module" src="/javascripts/acquisitions.js"></script> -->
+            <!-- GRÁFICO em chartjs -->
+            <!-- <script type="module" src="/javascripts/acquisitions.js"></script> -->
 
-        <script>
-            document.addEventListener('DOMContentLoaded', function () {
-                var ctx = document.getElementById('acquisitions').getContext('2d');
-        
-                var espec = <%- JSON.stringify(espec) %>;
-        
-                var data = {
-                    labels: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
-                    datasets: [{
-                        label: 'Quantidade de Agendamentos por Mês',
-                        data: espec.map(item => item.qtd),
-                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                        borderColor: 'rgba(75, 192, 192, 1)',
-                        borderWidth: 1
-                    }]
-                };
-        
-                var options = {
-                    scales: {
-                        y: {
-                            beginAtZero: true
+            <script>
+                document.addEventListener('DOMContentLoaded', function () {
+                    var ctx = document.getElementById('acquisitions').getContext('2d');
+            
+                    var espec = <%- JSON.stringify(espec) %>;
+            
+                    var data = {
+                        labels: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
+                        datasets: [{
+                            label: 'Quantidade de Agendamentos por Mês',
+                            data: espec.map(item => item.qtd),
+                            backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                            borderColor: 'rgba(75, 192, 192, 1)',
+                            borderWidth: 1
+                        }]
+                    };
+            
+                    var options = {
+                        scales: {
+                            y: {
+                                beginAtZero: true
+                            }
                         }
-                    }
-                };
-        
-                var myChart = new Chart(ctx, {
-                    type: 'bar',
-                    data: data,
-                    options: options
+                    };
+            
+                    var myChart = new Chart(ctx, {
+                        type: 'bar',
+                        data: data,
+                        options: options
+                    });
                 });
-            });
-        </script>
-        
-
+            </script>
         </div>
+        
+        <div>
+            <h1>Agendamentos do dia</h1>
+            <table style="width: 300px;">
+                <tr>
+                    <th>Cliente</th>
+                    <th>Serviço</th>
+                    <th>Hora</th>
+                </tr>
+                <% for(let item of agendamentosDoDia) { %>
+                    <tr>
+                        <td> <%= item.cliente %> </td>
+                        <td> <%= item.servico %> </td>
+                        <td> <%= formatHours(item.horario) %> </td>
+                    </tr>
+                <% } %>
+            </table>
+        </div>
+
+
+    </div>
 
 
 </body>
