--- a/views/admin_panel/novo_servico.ejs
+++ b/views/admin_panel/novo_servico.ejs
@@ -26,7 +26,7 @@
                 </section>
                 <section>
                     <div>
-                        <label for="servico">Email</label>
+                        <label for="servico">Serviço</label>
                         <input type="text" id="servico" name="servico">
                     </div>
                 </section>
